src/test/deca/syntax/invalid/not_provided/caracteres_invalide.deca
// Description:
//    Un caractère qui n'appartient pas a Déca.
//
// Resultats:
//    Ligne 10: Erreur: caractère non reconnu (erreur de lexeur)
//
// Historique:
//    cree le 05/01/2022

´